과제 수행 (강의) 1. 일별 수업정보 반환 2. 수강생 상태 변경 (활성화, 비활성화) 3. 수강료 변경