@@ -6,6 +6,7 @@ import java.util.stream.Collectors;
 import org.fastcampus.student_management.application.course.dto.CourseInfoDto;
 import org.fastcampus.student_management.application.student.StudentService;
 import org.fastcampus.student_management.domain.Course;
+import org.fastcampus.student_management.domain.CourseList;
 import org.fastcampus.student_management.domain.DayOfWeek;
 import org.fastcampus.student_management.domain.Student;
 import org.fastcampus.student_management.repo.CourseRepository;
@@ -31,13 +32,24 @@ public class CourseService {
 
     return courseDayOfWeekList.stream()
                               .map(CourseInfoDto::new)
-                              .collect(Collectors.toList());
+                              .toList(); // Collectors(Collector.toList)
     //return new ArrayList<>();
   }
 
   public void changeFee(String studentName, int fee) {
     // TODO: 4. 과제 구현 부분
     List<Course> studentCourseList = courseRepository.getCourseListByStudent(studentName);
-    studentCourseList.forEach(course -> course.changeFee(fee));
+
+//    studentCourseList.forEach(course -> course.changeFee(fee));
+
+//    for(Course course : studentCourseList) {
+//      if(course.isSameDay(DayOfWeek.SATURDAY) || course.isSameDay(DayOfWeek.SUNDAY)) {
+//        course.changeFee((int)(fee * 1.5));
+//      }
+//      course.changeFee(fee);
+//    }
+
+    CourseList courseList = new CourseList(studentCourseList);
+    courseList.changeAllCourseFee(fee);
   }
 }
